# ndimsplinejax

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.md  SplineCoefs_from_GriddedData.py  SplineInterpolant.py  caller.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
jupyter_notebooks/: 1D_spline_v3_JAX.ipynb  2D_spline_v3_JAX.ipynb  3D_spline_v3_JAX.ipynb  4D_spline_v3_JAX.ipynb  5D_spline_v3_JAX.ipynb
src/ndimsplinejax/: SplineCoefs_from_GriddedData.py  SplineInterpolant.py  __init__.py  _version.py  coeffs.py  core.py
tests/: test_5d.py
tests/smoke/: test_package.py
tests/unit/: test_5d.py
